syntax = "proto3";

package functions;

import "github.com/appcelerator/amp/data/accounts/accounts.proto";

message Function {
  string id = 1;
  string name = 2;
  string image = 3;
  accounts.Account owner = 4;
  int64 create_dt = 5;
}

message FunctionCall {
  string callID = 1;
  bytes input = 2;
  functions.Function function = 3;
  string returnTo = 4;
}

message FunctionReturn {
  string callID = 1;
  bytes output = 2;
}
